made changes in html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="en">git status-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -10,7 +8,7 @@
     <title>Pizza point</title>
 </head>
 <body>
-    <h1>PIZZA HUB</h1>
+    <h1>PIZZA inn HUB</h1>
 
     <div>
     <form action="/action_page.php">
@@ -50,7 +48,7 @@
         
 
         <div class="cities">
-            <button type="button">submit your order</button>
+            <button type="button">submit your order here</button>
 
 
       </form> 
